--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <h1>Bookmarks Most Wanted</h1>
   </header>
   <div id="errors-div"></div>
-  <main></main>
+  <main id="root"></main>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript"></script>
 </body>
